--- a/tootoo2/examples/tootoo2-r1.html
+++ b/tootoo2/examples/tootoo2-r1.html
@@ -27,9 +27,6 @@
 	};
 
 
-	let editor, files;
-	const b = '<br>';
-
 	init();
 
 	function init() {
@@ -58,7 +55,7 @@
 
 				'<details open >' +
 
-					'<summary><h3>Menu</h3></summary>' +
+					'<summary><h3 id=menuTitle >Menu</h3></summary>' +
 
 					'<div id=breadcrumbs ></div>' +
 					'<div id=menuItems ></div>' +
