--- a/tootoo2/examples/tootoo2-prediqtiv-r1.html
+++ b/tootoo2/examples/tootoo2-prediqtiv-r1.html
@@ -16,6 +16,8 @@
 <script>
 // Copyright 2017 Jaanga authors ~ MIT license
 
+	let images = 'https://raw.githubusercontent.com/prediqtiv/prediqtiv.github.io/master/images/';
+
 	user = {
 		user : 'prediqtiv',
 		subText : 'Invest smarter',
@@ -26,68 +28,27 @@
 	};
 
 
-	 TOO.setMenuContents = function() {
+	TOO.tableOfContents = [
 
-		files = [];
-		menuTitle.innerHTML = 'Table of Contents';
-		breadcrumbs.innerHTML = '';
-		menuItems.innerHTML = '';
+		[ 'header', 'predIQtiv' ],
+			[ '', 'README.md', 'predIQtiv home page' ],
+			[ '', 'license.md', 'Copyright and license' ],
+		[ 'header', 'eyeCue'],
+			[ 'eye-cue/', 'README.md', 'eyeCue Read Me' ],
+			[ 'eye-cue/replay/', 'README.md', '<ul><li>eyeCue Replay Read Me</li></ul>' ],
+			[ 'eye-cue/realtime/', 'README.md', '<ul><li>eyeCue Realtime Read Me</li></ul>' ],
+		[ 'header', 'Trades'],
+			[ 'trades-get/', 'README.md', 'Trades Get Read Me' ],
+		[ 'header', 'Tweets'],
+			[ 'tweets/', 'README.md', 'Tweets Read Me' ],
+		[ 'header', 'White Papers'],
+			[ 'white-papers/', 'README.md', 'White Papers Read Me' ],
+			[ 'white-papers/', 'outliers-data-normlization.md', '<ul><li>Markets, Outliers and Data Normalization</li></ul>' ],
+		[ 'header', 'Device Parameters Test '],
+			[ 'device-parameters-test/', 'README.md', 'Device Parameters Test Read Me' ],
 
-		fileTitles = [
+	];
 
-			[ 'header', 'predIQtiv' ],
-				[ './', 'README.md', 'predIQtiv home page' ],
-				[ './', 'license.md', 'Copyright and license' ],
-			[ 'header', 'eyeCue'],
-				[ 'eye-cue/', 'README.md', 'eyeCue Read Me' ],
-			[ 'header', 'Trades'],
-				[ 'trades-get/', 'README.md', 'Trades Get Read Me' ],
-			[ 'header', 'Tweets'],
-				[ 'tweets/', 'README.md', 'Tweets Read Me' ],
-			[ 'header', 'White Papers'],
-				[ 'white-papers/', 'README.md', 'White Papers Read Me' ],
-			[ 'header', 'Device Parameters Test '],
-				[ 'device-parameters-test/', 'README.md', 'Device Parameters Test Read Me' ],
-
-
-		];
-
-		let count = 0;
-
-		for ( let i = 0; i < fileTitles.length; i++ ) {
-
-			if ( fileTitles[ i ][ 0 ] === 'header') {
-
-				menuItems.innerHTML += '<h4>'  + fileTitles[ i ][ 1 ] + '</h4>';
-
-			} else {
-
-				menuItems.innerHTML += '<div id=file' + count++ + ' style=width:100%; >' +
-				'<a href=JavaScript:TOO.getFileSetContents("' + fileTitles[ i ][ 0 ] + '/' + fileTitles[ i ][ 1 ] + '"); > ' +
-					fileTitles[ i ][ 2 ] +
-				' </a>' +
-				'</div>';
-
-				files.push( fileTitles[ i ][ 0 ] + fileTitles[ i ][ 1 ] );
-
-			 }
-		}
-
-		if ( !location.hash ) {
-
-			TOO.getFileSetContents( 'README.md' );
-
-		} else {
-
-			TOO.getFileSetContents( path + '/' + file );
-
-		}
-
-	}
-
-
-	let editor, files;
-	const b = '<br>';
 
 	init();
 
@@ -103,10 +64,13 @@
 			'<div id=menu >' +
 
 				'<h2>' +
-					'<a href=http://jaanga.github.io title="Jaanga - your 3D happy place" > &#x2766 </a><br>' +
+//					'<a href=http://jaanga.github.io title="Jaanga - your 3D happy place" > &#x2766 </a><br>' +
 //					'<a href="" title="Click here to refresh this page" >' + document.title + '</a>' +
-					'<a href="" title="Click here to refresh this page" >' + location.pathname.split( '/' ).pop().slice( 0, -5).replace( /-/g, ' ' ) + '</a>' +
-					' ~ <a href=index.html#readme.md onmouseover=popHelp.style.display=""; onmouseout=popHelp.style.display="none"; > &#x24D8; </a>' +
+//					'<a href="" title="Click here to refresh this page" >' + location.pathname.split( '/' ).pop().slice( 0, -5).replace( /-/g, ' ' ) + '</a>' +
+					'<a href="" title="Click here to refresh this page" ><img src=' + images + 'predIQtiv.png height=48px ></a>' +
+					' <a href="https://github.com/' + user.user + '/' + user.repo + '" onmouseover=popHelp.style.display=""; onmouseout=popHelp.style.display="none"; style=vertical-align:top; > &#x24D8; </a>' +
+
+//					' ~ <a href=index.html#readme.md onmouseover=popHelp.style.display=""; onmouseout=popHelp.style.display="none"; > &#x24D8; </a>' +
 				'</h2>' +
 
 				'<div class=popUp id=popHelp style=display:none; ><p>Hi there!</p>Click the i-in-circle, info icon for latest updates.</div>' +
