--- a/tootoo2/examples/tootoo2-leader-photos.html
+++ b/tootoo2/examples/tootoo2-leader-photos.html
@@ -12,6 +12,7 @@
 <script src=https://cdn.rawgit.com/showdownjs/showdown/master/dist/showdown.min.js ></script>
 <script src=../r1/css.js ></script>
 <script src=../r1/sel-select-users.js ></script>
+<script src=../r1/mnu-menu-settings.js ></script>
 <script src=../r1/too-tootoo.js ></script>
 <script>
 // Copyright 2017 Jaanga authors ~ MIT license
@@ -26,11 +27,12 @@
 
 	TOO.tableOfContents = [
 		[ 'header', 'Leader Photos' ],
-			[ './', 'README.md', 'Home' ],
+			[ '', 'README.md', 'Home' ],
 //				[ './', 'license.md', 'Copyright and license' ],
 		[ 'header', 'Australia'],
 			[ 'albums/Australia/australian-cowboys/', 'gallery', 'Australian Cowboys' ],
 			[ 'albums/Australia/australian-station-girl/', 'gallery', 'Australian Station Girl' ],
+
 		[ 'header', 'Balkans War'],
 			[ 'albums/Balkans-war/Bosniabw/', 'gallery', 'Bosnia BW' ],
 			[ 'albums/Balkans-war/kosovar-refugees-albania', 'gallery', 'Kosovar Refugees Albania' ],
@@ -67,7 +69,9 @@
 		[ 'header', 'Paris Student Demonstrations' ],
 			[ 'albums/Parisstudentdemonstrations/Parisstudentdemonstration31-03-2006', 'gallery', 'Paris Student Demonstration 31 03 2006' ],
 			[ 'albums/Parisstudentdemonstrations/parisgeneralstrike', 'gallery', 'Paris General Strike' ],
+
 		[ 'header', 'Sainte Sara' ],
+			[ 'albums/Sainte-Sara', 'gallery', 'Sainte Sara' ],
 		[ 'header', 'Spanish Spring Festivals' ],
 			[ 'albums/Spanish-Spring-Festivals/Feria-Sevilla', 'gallery', 'Feria Sevilla' ],
 			[ 'albums/Spanish-Spring-Festivals/Semana-Santa', 'gallery', 'Semana Santa' ],
@@ -77,29 +81,33 @@
 			[ 'albums/Tropical-Rainforests/album01', 'gallery', 'Album01' ],
 			[ 'albums/Tropical-Rainforests/yanomani-deforestation', 'gallery', 'Yanomani Deforestation' ],
 		[ 'header', 'Vilhelm Covaci' ],
+			[ 'albums/Vilhelm-Covaci', 'gallery', 'Vilhelm Covaci' ],
 		[ 'header', 'Art Commissions' ],
-			[ 'albums/artcommissions/artists', 'gallery', 'Artists' ],
-			[ 'albums/artcommissions/joachimecklwasser', 'gallery', 'Joachimecklwasser' ],
+//			[ 'albums/artcommissions/artists', 'gallery', 'Artists' ],
+			[ 'albums/artcommissions/joachimecklwasser', 'gallery', 'Joachim Ecklwasser' ],
 		[ 'header', 'Batak' ],
+			[ 'albums/batak', 'gallery', 'Batak' ],
 		[ 'header', 'Bits' ],
-		[ 'header', 'Black-and-white' ],
+			[ 'albums/bits', 'gallery', 'Bits' ],
+		[ 'header', 'Black and White' ],
 			[ 'albums/black-and-white/bosnia-balkans-1994', 'gallery', 'Bosnia Balkans 1994' ],
 			[ 'albums/black-and-white/central-america', 'gallery', 'Central America' ],
 			[ 'albums/black-and-white/deforestation-seasia', 'gallery', 'Deforestation Seasia' ],
 			[ 'albums/black-and-white/earlyyears', 'gallery', 'Earlyyears' ],
 			[ 'albums/black-and-white/staffordshire-england', 'gallery', 'Staffordshire England' ],
 			[ 'albums/black-and-white/street-children-ca', 'gallery', 'Street Children Ca' ],
-		[ 'header', 'Centralamerica' ],
+		[ 'header', 'Central America' ],
 			[ 'albums/centralamerica/guatemala', 'gallery', 'Guatemala' ],
 			[ 'albums/centralamerica/guatemalabw', 'gallery', 'Guatemalabw' ],
-			[ 'albums/centralamerica/streetchildren', 'gallery', 'Streetchildren' ],
-			[ 'albums/centralamerica/todossantos', 'gallery', 'Todossantos' ],
+			[ 'albums/centralamerica/streetchildren', 'gallery', 'Street Children' ],
+			[ 'albums/centralamerica/todossantos', 'gallery', 'Todos Santos' ],
 		[ 'header', 'Chernobyl' ],
-		[ 'header', 'Classicpowerboats' ],
+			[ 'albums/chernobyl', 'gallery', 'Chernobyl' ],
+		[ 'header', 'Classic Power Boats' ],
 			[ 'albums/classicpowerboats/motorboat', 'gallery', 'Motorboat' ],
-			[ 'albums/classicpowerboats/powerboatp1', 'gallery', 'Powerboatp1' ],
+			[ 'albums/classicpowerboats/powerboatp1', 'gallery', 'Powerboat P1' ],
 		[ 'header', 'Climate' ],
-			[ 'albums/climate/hurricanemitch', 'gallery', 'Hurricanemitch' ],
+			[ 'albums/climate/hurricanemitch', 'gallery', 'Hurricane Mitch' ],
 		[ 'header', 'Cuisine' ],
 			[ 'albums/cuisine/bras', 'gallery', 'Bras' ],
 			[ 'albums/cuisine/genoa', 'gallery', 'Genoa' ],
@@ -109,72 +117,79 @@
 		[ 'header', 'Elements' ],
 			[ 'albums/elements/fire', 'gallery', 'Fire' ],
 		[ 'header', 'Food' ],
-			[ 'albums/food/chasseausanglier', 'gallery', 'Chasseausanglier' ],
+			[ 'albums/food/chasseausanglier', 'gallery', 'Chasseau Sanglier' ],
 			[ 'albums/food/meat', 'gallery', 'Meat' ],
 			[ 'albums/food/meatbook', 'gallery', 'Meatbook' ],
 		[ 'header', 'Forests' ],
-			[ 'albums/forests/forestsaerialfrance', 'gallery', 'Forestsaerialfrance' ],
+			[ 'albums/forests/forestsaerialfrance', 'gallery', 'Forests Aerial France' ],
 			[ 'albums/forests/paris-nature', 'gallery', 'Paris Nature' ],
-		[ 'header', 'Hanspeter2' ],
-		[ 'header', 'Homepagephotos' ],
+		[ 'header', 'Hans Peter 2' ],
+			[ 'albums/hanspeter2', 'gallery', 'Hans Peter 2' ],
+		[ 'header', 'Home Page Photos' ],
+			[ 'albums/homepagephotos', 'gallery', 'Home Page Photos' ],
 		[ 'header', 'Horses' ],
 			[ 'albums/horses/fantasia', 'gallery', 'Fantasia' ],
 			[ 'albums/horses/romany', 'gallery', 'Romany' ],
-			[ 'albums/horses/todossantosnew', 'gallery', 'Todossantosnew' ],
-		[ 'header', 'Leaderphotos' ],
-			[ 'albums/leaderphotos/bartholomeworthodoxturkey', 'gallery', 'Bartholomeworthodoxturkey' ],
-			[ 'albums/leaderphotos/panoramafb', 'gallery', 'Panoramafb' ],
+			[ 'albums/horses/todossantosnew', 'gallery', 'Todos Santos New' ],
+		[ 'header', 'Leader Photos' ],
+			[ 'albums/leaderphotos/bartholomeworthodoxturkey', 'gallery', 'Bartholomew Orthodox Turkey' ],
+			[ 'albums/leaderphotos/panoramafb', 'gallery', 'Panorama FB' ],
 		[ 'header', 'Music' ],
-			[ 'albums/music/goranbregovic', 'gallery', 'Goranbregovic' ],
-			[ 'albums/music/goranbregovickristjanjarvi', 'gallery', 'Goranbregovickristjanjarvi' ],
-		[ 'header', 'Nigel_dickinson_portraits' ],
+			[ 'albums/music/goranbregovic', 'gallery', 'Goran Bregovic' ],
+			[ 'albums/music/goranbregovickristjanjarvi', 'gallery', 'Goran Bregovic Kristjan Jarvi' ],
+		[ 'header', 'Nigel Dickinson Portraits' ],
+			[ 'albums/', 'gallery', '' ],
 		[ 'header', 'Nigeria' ],
-			[ 'albums/nigeria/Coupe-Decaleaubataclan', 'gallery', 'Coupe Decaleaubataclan' ],
+			[ 'albums/nigeria/Coupe-Decaleaubataclan', 'gallery', 'Coupe Decaleau Bataclan' ],
 			[ 'albums/nigeria/hausa-animist-ritual', 'gallery', 'Hausa Animist Ritual' ],
 			[ 'albums/nigeria/kano-durbar-fantasia', 'gallery', 'Kano Durbar Fantasia' ],
 			[ 'albums/nigeria/sharia-kano-nigeria', 'gallery', 'Sharia Kano Nigeria' ],
 			[ 'albums/nigeria/yopougon', 'gallery', 'Yopougon' ],
 		[ 'header', 'Outdoors' ],
 			[ 'albums/outdoors/sinai-desert-trek', 'gallery', 'Sinai Desert Trek' ],
-		[ 'header', 'Partyrave' ],
+		[ 'header', 'Party Rave' ],
 			[ 'albums/partyrave/techno', 'gallery', 'Techno' ],
-		[ 'header', 'Peopleportraits' ],
+		[ 'header', 'People Portraits' ],
 			[ 'albums/peopleportraits/John-travolta-jumbo-jet', 'gallery', 'John Travolta Jumbo Jet' ],
 			[ 'albums/peopleportraits/portraits', 'gallery', 'Portraits' ],
-		[ 'header', 'Peripheryhost' ],
+		[ 'header', 'Periphery Host' ],
 			[ 'albums/peripheryhost/periphery', 'gallery', 'Periphery' ],
 		[ 'header', 'Places' ],
 			[ 'albums/places/corsica-fire-ice-water', 'gallery', 'Corsica Fire Ice Water' ],
 			[ 'albums/places/nino-emma-corretti-soglio', 'gallery', 'Nino Emma Corretti Soglio' ],
-		[ 'header', 'Pollutionandenvironment' ],
-			[ 'albums/pollutionandenvironment/pollutiondanube', 'gallery', 'Pollutiondanube' ],
+		[ 'header', 'Pollution and Environment' ],
+			[ 'albums/pollutionandenvironment/pollutiondanube', 'gallery', 'Pollution Danube' ],
 			[ 'albums/pollutionandenvironment/road-protest', 'gallery', 'Road Protest' ],
 		[ 'header', 'Religions' ],
-			[ 'albums/religions/animistafrica', 'gallery', 'Animistafrica' ],
-			[ 'albums/religions/buddhismfrance', 'gallery', 'Buddhismfrance' ],
-			[ 'albums/religions/elrociospain', 'gallery', 'Elrociospain' ],
-			[ 'albums/religions/gypsypilgrimmage', 'gallery', 'Gypsypilgrimmage' ],
-			[ 'albums/religions/semanasanta', 'gallery', 'Semanasanta' ],
+			[ 'albums/religions/animistafrica', 'gallery', 'Animist Africa' ],
+			[ 'albums/religions/buddhismfrance', 'gallery', 'Buddhism France' ],
+			[ 'albums/religions/elrociospain', 'gallery', 'El Rocio Spain' ],
+			[ 'albums/religions/gypsypilgrimmage', 'gallery', 'Gypsy Pilgrimmage' ],
+			[ 'albums/religions/semanasanta', 'gallery', 'Semana Santa' ],
 		[ 'header', 'Ridiculous' ],
-			[ 'albums/ridiculous/fishcircus', 'gallery', 'Fishcircus' ],
-		[ 'header', 'Romaexpo' ],
-			[ 'albums/romaexpo/movingwalls', 'gallery', 'Movingwalls' ],
-			[ 'albums/romaexpo/roma40', 'gallery', 'Roma40' ],
-		[ 'header', 'Saintesmaries' ],
-			[ 'albums/saintesmaries/Saralepelerinagedesgitans', 'gallery', 'Saralepelerinagedesgitans' ],
-			[ 'albums/saintesmaries/gypsiesandguardianssaintesmaries', 'gallery', 'Gypsiesandguardianssaintesmaries' ],
-			[ 'albums/saintesmaries/gypsycampssaintesmaries', 'gallery', 'Gypsycampssaintesmaries' ],
-			[ 'albums/saintesmaries/gypsymusicdancebears', 'gallery', 'Gypsymusicdancebears' ],
+			[ 'albums/ridiculous/fishcircus', 'gallery', 'Fish Circus' ],
+		[ 'header', 'Roma Expo' ],
+			[ 'albums/romaexpo/movingwalls', 'gallery', 'Moving Walls' ],
+			[ 'albums/romaexpo/roma40', 'gallery', 'Roma 40' ],
+		[ 'header', 'Saintes Maries' ],
+			[ 'albums/saintesmaries/Saralepelerinagedesgitans', 'gallery', 'Sara le Pelerinage des Gitans' ],
+			[ 'albums/saintesmaries/gypsiesandguardianssaintesmaries', 'gallery', 'Gypsies and Guardians Saintes Maries' ],
+			[ 'albums/saintesmaries/gypsycampssaintesmaries', 'gallery', 'Gypsy Camps Saintes Maries' ],
+			[ 'albums/saintesmaries/gypsymusicdancebears', 'gallery', 'Gypsy Music Dance Bears' ],
 			[ 'albums/saintesmaries/manitas', 'gallery', 'Manitas' ],
-			[ 'albums/saintesmaries/saintesara', 'gallery', 'Saintesara' ],
-			[ 'albums/saintesmaries/saintesmariesaerial', 'gallery', 'Saintesmariesaerial' ],
-			[ 'albums/saintesmaries/saintesmarieschurch', 'gallery', 'Saintesmarieschurch' ],
+			[ 'albums/saintesmaries/saintesara', 'gallery', 'Sainte Sara' ],
+			[ 'albums/saintesmaries/saintesmariesaerial', 'gallery', 'Saintes Maries aerial' ],
+			[ 'albums/saintesmaries/saintesmarieschurch', 'gallery', 'Saintes Maries Church' ],
 		[ 'header', 'Sarawak' ],
+			[ 'albums/sarawak', 'gallery', 'Sarawk' ],
 		[ 'header', 'Sebastian' ],
-		[ 'header', 'Sebastian02' ],
-		[ 'header', 'Sebastianportraits' ],
+			[ 'albums/sebastian', 'gallery', 'Sebastian' ],
+		[ 'header', 'Sebastian 02' ],
+			[ 'albums/sebastian02', 'gallery', '' ],
+		[ 'header', 'Sebastian Portraits' ],
+			[ 'albums/sebastianportraits', 'gallery', 'Sebastian Portraits' ],
 		[ 'header', 'Weddings' ],
-			[ 'albums/weddings/mariageyannannesophie', 'gallery', 'Mariageyannannesophie' ],
+			[ 'albums/weddings/mariageyannannesophie', 'gallery', 'Mariage Yann Anne Sophie' ],
 	];
 
 
@@ -203,7 +218,7 @@
 
 				'<p><small>' + document.head.querySelector( "[name=description]" ).content  + '</small></p>' +
 
-				'<div id=selectUsers ></div>' +
+//				'<div id=selectUsers ></div>' +
 
 				'<details open >' +
 
@@ -217,7 +232,11 @@
 					'<div id=breadcrumbs style=display:"none"; ></div>' +
 					'<div id=menuItems ></div>' +
 
-				'</details>' +
+				'</details>' + b +
+
+				'<div id=mnuSettings ></div>' +
+
+				'<div id=mnuAbout ></div>' +
 
 			'</div>' +
 
