--- a/tootoo2/examples/tootoo2-theo-draw.html
+++ b/tootoo2/examples/tootoo2-theo-draw.html
@@ -2,11 +2,11 @@
 <html lang=en >
 <head>
 <meta charset=utf-8 >
-<title></title>
+<title>TA Drawing</title>
 <meta name=viewport content='width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no' >
-<meta name=description content='Browse and view files on GitHub with remarkable ease.' >
+<meta name=description content='Basic slide in and slide out menu with three bar icon that adjusts for small screen size.' >
 <meta name=keywords content='CSS,HTML,JavaScript,GitHub,FOSS' >
-<meta name=date content='2016-11-05' >
+<meta name=date content='2017-02-26' >
 </head>
 <body>
 <script src=https://cdn.rawgit.com/showdownjs/showdown/master/dist/showdown.min.js ></script>
@@ -14,47 +14,46 @@
 <script src=../r1/sel-select-users.js ></script>
 <script src=../r1/mnu-menu-settings.js ></script>
 <script src=../r1/too-tootoo.js ></script>
-
 <script>
-// Copyright 2017 Jaanga authors ~ MIT license
+// Copyright © 2017 Jaanga authors. MIT license
+// https://github.com/showdownjs/showdown
+
 
 	user = {
-		user : 'prediqtiv',
-		subText : 'Invest smarter',
-		repo : 'prediqtiv.github.io',
+		user : 'theo-armour',
+		subText : 'Pet the cat and don\'t get fat',
+		logo: '<img src="" height=32 >',
+		repo : 'drawing',
 		branch : 'master',
 		folder : '',
-		defaultFile : 'README.md'
+//		noIndex : true
 	};
-
 
 	init();
 
 	function init() {
 
-		let container, contents, hamburger, menu;
+		var container, contents, hamburger, menu;
 
 		CSS.setCSS();
 
 		container = document.body.appendChild( document.createElement( 'div' ) );
 		container.id = 'container';
 		container.innerHTML =
+
 			'<div id=menu >' +
 
 				'<h2>' +
-					'<a href=http://jaanga.github.io title="Jaanga - your 3D happy place" > &#x2766 </a><br>' +
-//					'<a href="" title="Click here to refresh this page" >' + document.title + '</a>' +
-					'<a href="" title="Click here to refresh this page" >' + location.pathname.split( '/' ).pop().slice( 0, -5).replace( /-/g, ' ' ) + '</a>' +
-					' ~ <a href=index.html#readme.md onmouseover=popHelp.style.display=""; onmouseout=popHelp.style.display="none"; > &#x24D8; </a>' +
+					'<a href=https://pushme-pullyou.github.io/ title="Pushme-Pullyou - your coming and going happy place" > &#x2766 </a><br>' +
+					'<a href="" title="Click here to refresh this page" >' + document.title + '</a>' +
+					' ~ <a href="https://github.com/pushme-pullyou/pushme-pullyou.github.io/tree/master/tootoo/" onmouseover=popHelp.style.display=""; onmouseout=popHelp.style.display="none"; > &#x24D8; </a>' +
 				'</h2>' +
 
-				'<div class=popUp id=popHelp style=display:none; ><p>Hi there!</p>Click the i-in-circle, info icon for latest updates.</div>' +
+				'<div class=popUp id=popHelp style=display:none; ><div>Hi there!</div>Click the i-in-circle, info icon for latest updates.</div>' +
 
-				'<p><small>' + document.head.querySelector( "[name=description]" ).content  + '</small></p>' +
+				'<p><small>Browse some of my work with a utility I\'m in the process of building.</small></p>' +
 
-				'<div id=selSelectUsers ></div>' +
-
-				'<details open >' +
+				'<details open>' +
 
 					'<summary><h3 id=menuTitle >Menu</h3></summary>' +
 
@@ -79,11 +78,10 @@
 
 		if ( window.self !== window.top ) { container.style.left = '-325px'; }
 
-		SEL.initSelectUsers();
-
 		TOO.initUser( user );
 
 	}
+
 
 </script>
 </body>
