--- a/tootoo2/examples/tootoo2-open-source-guide.html
+++ b/tootoo2/examples/tootoo2-open-source-guide.html
@@ -123,9 +123,9 @@
 
 		text = TOO.converter.makeHtml( raw );
 
-		text = text.replace( /image: \/assets/g, '<img src="https://raw.githubusercontent.com/github/opensource.guide/gh-pages/assets' );
+		text = text.replace( /image: \/assets/g, '<img src="https://rawgit.com/github/opensource.guide/gh-pages/assets' );
 
-		text = text.replace( /src="\/assets/g, 'src="https://raw.githubusercontent.com/github/opensource.guide/gh-pages/assets' );
+		text = text.replace( /src="\/assets/g, 'src="https://rawgit.com/github/opensource.guide/gh-pages/assets' );
 
 //		text = text.replace( /a href=\"LICENSE"/g, 'a href=JavaScript:location.hash="file=LICENSE"');
 
