--- a/tootoo2/readme.html
+++ b/tootoo2/readme.html
@@ -5,6 +5,8 @@
 </head>
 <body>
 <script>
+// This script allows you to read a markdown file locally
+// - so you can see what it looks like before you senff it to GitHub.
 
 	window.location.href = './r1/tootoo2-r1.html#@@@./README.md';
 
